--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 	<properties>
 		<sonar.host.url>http://http://54.82.7.244:9000//</sonar.host.url>
 		<sonar.login>admin</sonar.login>
-		<sonar.password>4455@</sonar.password>
+		<sonar.password>4455</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>11</maven.compiler.source>
                 <maven.compiler.target>11</maven.compiler.target>
