--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 	<description>Maven Standalone Application</description>
 
 	<properties>
-		<sonar.host.url>http://54.163.21.201/:9000/</sonar.host.url>
+		<sonar.host.url>http://54.163.21.201:9000/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
 		<sonar.password>5566</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
